# cofd-pc

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  i18n.toml  index.html  result  rust-toolchain.toml
.cargo/: config.toml
.github/actions-rs/: grcov.yml
.github/workflows/: dev.yml  pages.yml  release.yml  rust.yml
cofd/app/: Cargo.toml  i18n.toml  index.html
cofd/app/i18n/en-GB/: cofd_pc.ftl
cofd/app/i18n/en-US/: cofd_pc.ftl
cofd/app/i18n/pl-PL/: cofd_pc.ftl
cofd/app/src/: i18n.rs  main.rs  store.rs
cofd/app/src/component/: attributes.rs  forms.rs  info.rs  integrity.rs  list.rs  merits.rs  mod.rs  skills.rs  traits.rs
cofd/app/src/view/: character_list.rs  creator.rs  equipment.rs  mod.rs  overview.rs  splat_extras.rs
cofd/app/src/view/werewolf/: forms.rs  mod.rs
cofd/app/src/widget/: boxes.rs  dots.rs  mod.rs  track.rs
cofd/derive/: Cargo.toml
cofd/derive/src/: lib.rs
cofd/lib/: Cargo.toml
cofd/lib/data/: gifts.ron  merits_universal.ron
cofd/lib/src/: dice_pool.rs  lib.rs
cofd/lib/src/character/: dice_pool.rs  mod.rs  modifier.rs  traits.rs
cofd/lib/src/splat/: ability.rs  changeling.rs  geist.rs  mage.rs  merits.rs  mod.rs  vampire.rs  werewolf.rs
cofd/macros/: Cargo.toml
cofd/macros/src/: lib.rs
cofd/src/: lib.rs
cofd/src/character/: mod.rs
cofd/src/character/ability/: mod.rs
cofd/src/splat/: changeling.rs  mage.rs  vampire.rs
cofd/traits/: Cargo.toml
cofd/traits/src/: lib.rs
cofd/util/: Cargo.toml
cofd/util/src/: lib.rs
cofd/util/src/scraper/: mod.rs
cofd/xtask/: Cargo.toml
cofd/xtask/src/scraper/: mod.rs
cofd_pc/: Cargo.toml
i18n/en-GB/: cofd_pc.ftl
i18n/en-US/: cofd_pc.ftl
i18n/pl-PL/: cofd_pc.ftl
src/: i18n.rs  main.rs  store.rs
src/component/: attributes.rs  forms.rs  info.rs  integrity.rs  list.rs  merits.rs  mod.rs  skills.rs  traits.rs
src/view/: character_list.rs  creator.rs  equipment.rs  mod.rs  overview.rs  sheet.rs  splat_extras.rs
src/widget/: dots.rs  track.rs
