[workspace]
members = [ "cofd/*" ]
default-members = [ "cofd/app" ]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["m00n"]
edition = "2021"
license = "MPL"

[workspace.dependencies]
cofd = { path = "cofd/lib" }
cofd-macros = { path = "cofd/macros" }
cofd-traits = { path = "cofd/traits" }
cofd-xtask  = { path = "cofd/xtask" }

ron = "0.8"

[profile.dev]
incremental = false

[profile.release]
lto = true

[profile.release-web]
inherits = "release"
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"