[package]
name = "cofd-pc"
version = "1.0.0"
authors = ["m00n"]
edition = "2021"
license = "MPL"
publish = false

[profile.dev]
incremental = false

[profile.release]
lto = true

[profile.release-web]
inherits = "release"
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[dependencies]
iced = {  version = "0.12", features = ["lazy", "advanced"] }
#iced_lazy = "0.6"
#iced_native = "0.10"

# iced_style = "0.5"
# iced = { git = "https://github.com/iced-rs/iced" }
# iced_lazy = { git = "https://github.com/iced-rs/iced" }
# iced_native = { git = "https://github.com/iced-rs/iced" }
# iced_aw = {version = "0.2", default-features = false, features = ["pure", "tabs"]}
# iced_aw = {git = "https://github.com/iced-rs/iced_aw", features = ["pure", "tabs"]}
# iced_aw = { git = "https://github.com/genusistimelord/iced_aw", features = ["tabs"] }
log = "0.4"

cofd = { git = "https://github.com/m00nwtchr/cofd.git" }
codex-scraper = { git = "https://github.com/m00nwtchr/cofd-miner.git" }

closure = "0.3"
lazy_static = "1"
cfg-if = "1"

ron = "0.9.0-alpha.0"
serde = "1"

itertools = "0.13"


i18n-embed = { version = "0.14", features = ["fluent-system"] }
i18n-embed-fl = "0.8"
rust-embed = "8"
unic-langid = { version = "0.9", features = ["macros"] }

once_cell = "1.4"

anyhow = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i18n-embed = { version = "0.14", features = ["desktop-requester"] }
env_logger = "0.11"
directories = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.14", features = ["web-sys-requester"] }
rust-embed = { version = "8", features = [ "debug-embed" ] }
console_log = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
	'Window',
	'Storage'
]