[package]
name = "cofd-pc"
version = "1.0.0"
authors = ["m00n"]
edition = "2021"
license = "MPL"
publish = false

[features]
save_demo_characters = []

[profile.dev]
incremental = false

[profile.release]
lto = true

[profile.release-web]
inherits = "release"
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'

[profile.coverage]
panic = "abort"
opt-level = 0
overflow-checks = false
incremental = false
codegen-units = 1
inherits = "test"

[dependencies]
iced = { version = "0.12", features = ["lazy", "advanced"] }

cofd = { git = "https://github.com/m00nwtchr/cofd.git" }
#cofd = { path = "../cofd/lib" }
#codex-scraper = { git = "https://github.com/m00nwtchr/cofd-miner.git" }

closure = "0.3"
once_cell = "1.4"

anyhow = "1"
log = "0.4"

ron = "0.9.0-alpha.0"
serde = "1"

i18n-embed = { version = "0.14", features = ["fluent-system"] }
i18n-embed-fl = "0.8"
rust-embed = "8"
unic-langid = { version = "0.9", features = ["macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i18n-embed = { version = "0.14", features = ["desktop-requester"] }
env_logger = "0.11"
directories = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.14", features = ["web-sys-requester"] }
rust-embed = { version = "8", features = ["debug-embed"] }
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "*", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
	'Window',
	'Storage'
]
