[package]
name = "cofd-pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced"}
iced_native = {git = "https://github.com/iced-rs/iced"}
# iced_aw = {version = "0.2", default-features = false, features = ["pure", "tabs"]}
iced_aw = {git = "https://github.com/iced-rs/iced_aw", features = ["pure", "tabs"]}

cfg-if = "1"

# i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6"
rust-embed = "6"
fluent = "0.16"

once_cell = "1.4"

anyhow = "1"

cofd = { path = "../lib" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.13", features = ["fluent-system", "web-sys-requester"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"]}