[package]
name = "cofd-pc"
version = "0.1.0"
edition = "2021"

publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
iced = { git = "https://github.com/iced-rs/iced" }
iced_lazy = { git = "https://github.com/iced-rs/iced" }
iced_native = { git = "https://github.com/iced-rs/iced" }
# iced_aw = {version = "0.2", default-features = false, features = ["pure", "tabs"]}
# iced_aw = {git = "https://github.com/iced-rs/iced_aw", features = ["pure", "tabs"]}
# iced_aw = { git = "https://github.com/genusistimelord/iced_aw", features = ["tabs"] }

directories = "4"
ron = "0.8"

itertools = "0.10"

cfg-if = "1"

i18n-embed = { version = "0.13", features = ["fluent-system"] }
i18n-embed-fl = "0.6"
rust-embed = "6"
unic-langid = { version = "0.9", features = ["macros"] }

once_cell = "1.4"

anyhow = "1"

cofd = { path = "../lib" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i18n-embed = { version = "0.13", features = ["desktop-requester"] }
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.13", features = ["web-sys-requester"] }
console_log = "0.2"