[package]
name = "cofd-pc"
# version.workspace = true
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

publish = false

[dependencies]
iced = "0.8"
iced_lazy = "0.5"
iced_native = "0.9"
# iced_style = "0.5"
# iced = { git = "https://github.com/iced-rs/iced" }
# iced_lazy = { git = "https://github.com/iced-rs/iced" }
# iced_native = { git = "https://github.com/iced-rs/iced" }
# iced_aw = {version = "0.2", default-features = false, features = ["pure", "tabs"]}
# iced_aw = {git = "https://github.com/iced-rs/iced_aw", features = ["pure", "tabs"]}
# iced_aw = { git = "https://github.com/genusistimelord/iced_aw", features = ["tabs"] }
log = "0.4"

closure = "0.3"
lazy_static = "1"
cfg-if = "1"

ron = "0.8"
serde = "1"

itertools = "0.10"


i18n-embed = { version = "0.13", features = ["fluent-system"] }
i18n-embed-fl = "0.6"
rust-embed = "6"
unic-langid = { version = "0.9", features = ["macros"] }

once_cell = "1.4"

anyhow = "1"

cofd.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i18n-embed = { version = "0.13", features = ["desktop-requester"] }
env_logger = "0.10"
directories = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
i18n-embed = { version = "0.13", features = ["web-sys-requester"] }
rust-embed = { version = "6", features = [ "debug-embed" ] }
console_log = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
	'Window',
	'Storage'
]