[package]
name = "cofd"
version = "0.1.0"
edition = "2021"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
erased-serde = "0.3"
convert_case = "0.6"

cofd-traits = { path = "../traits" }

[dev-dependencies]
ron = "0.8"