[package]
name = "cofd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
erased-serde = "0.3"
convert_case = "0.6"

cofd-traits.workspace = true

[dev-dependencies]
ron = "0.8"