[package]
name = "cofd-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cofd-derive.workspace = true

serde = { version = "1", features = ["derive"] }