[package]
name = "cofd-xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
ron.workspace = true

tokio = { version = "1", features = ["full"]}
reqwest = "0.11"
scraper = "0.14"

convert_case = "0.6"